--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -127,6 +127,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit-icons.min.js"></script>
       <script src="{% static 'js/selectize.js' %}"></script>
       <script src="{% static 'js/project.js' %}"></script>
+      <script src="https://kit.fontawesome.com/2ebfe61a88.js" crossorigin="anonymous"></script>
     {% endblock javascript %}
     {% block extra_javascript %}{% endblock extra_javascript %}
     {% csrf_token%}
