--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -47,15 +47,13 @@
           <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
             <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
           </a>
-          <p>
-            <ul class="uk-padding-remove">
-              <li>Author: {{volume.author|truncatechars:150}}</li>
-              <li>Published: {{volume.published_date}}</li>
-              <li>Publisher: {{volume.publisher}}</li>
-              <li>Publication City: {{volume.published_city}}</li>
-              <li>Added: {{volume.created_at}}</li>
-            </ul>
-          </p>
+          <ul class="uk-padding-remove rx-card-text">
+            <li>Author: {{volume.author|truncatechars:150}}</li>
+            <li>Published: {{volume.published_date}}</li>
+            <li>Publisher: {{volume.publisher}}</li>
+            <li>Publication City: {{volume.published_city}}</li>
+            <li>Added: {{volume.created_at}}</li>
+          </ul>
         </div>
       </div>
 
@@ -73,15 +71,13 @@
         <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
           <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
         </a>
-        <p>
-          <ul class="uk-padding-remove">
-            <li>Author: {{volume.author|truncatechars:150}}</li>
-            <li>Published: {{volume.published_date}}</li>
-            <li>Publisher: {{volume.publisher}}</li>
-            <li>Publication City: {{volume.published_city}}</li>
-            <li>Added: {{volume.created_at}}</li>
-          </ul>
-        </p>
+        <ul class="uk-padding-remove rx-card-text">
+          <li>Author: {{volume.author|truncatechars:150}}</li>
+          <li>Published: {{volume.published_date}}</li>
+          <li>Publisher: {{volume.publisher}}</li>
+          <li>Publication City: {{volume.published_city}}</li>
+          <li>Added: {{volume.created_at}}</li>
+        </ul>
       </div>
     </div>
     {% endif %}
