--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -138,7 +138,7 @@
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',{% endif %}
         displayLayout: false,
         sidePanel: false,
-        {% if "/page/all" in request.get_full_path %}
+        {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ volume.pid }}/canvas/{{ volume.canvas_set.pid.first }}',
         viewType: "ThumbnailsView"
         {% endif %}
