--- a/apps/static/mirador/css/mirador-combined.css
+++ b/apps/static/mirador/css/mirador-combined.css
@@ -1905,10 +1905,9 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 .mirador-container .mirador-viewer a.mirador-osd-fullscreen {
   background: none;
   color: #929191;
-  *box-sizing: border-box;
+  box-sizing: border-box;
   margin-right: 5px;
   padding-bottom: 30px;
-  padding-left: 15px;
 }
 .mirador-container .mirador-viewer a.mirador-icon-window-menu,
 .mirador-container .mirador-viewer a.mirador-icon-toc,
@@ -2146,14 +2145,6 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   font-weight: bold;
   font-size: 16px;
 }
-.mirador-container .window-manifest-navigation {
-  float: right;
-  width: 24%;
-  text-align: right;
-  padding-right: 10px;
-  font-size: 16px;
-  display: contents;
-}
 .mirador-container .mirador-status-bar {
   background-color: #ccc;
   border-top: 1px solid #000;
@@ -2186,12 +2177,8 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   z-index: 1;
 }
 .mirador-container .manifest-info {
-  overflow: hidden;
+  overflow: auto;
   background: #fafafa;
-  width: 120px;
-  height: 40px;
-  float: right;
-  z-index: 2;
 }
 .mirador-container .manifest-info .mirador-btn {
   font-size: .8em;
@@ -2202,7 +2189,6 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   left: 0;
   right: 0;
   top: 0;
-  *margin-top: 34px;
   box-sizing: border-box;
   z-index: -1;
 }
