--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -921,3 +921,45 @@ p {
   padding: 5px;
   margin: 0;
 }
+
+.rx-grid {
+  margin: 40px auto;
+  max-width: 1024px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.rx-col {
+  border: 1px dashed gray;
+  flex: 1 1 100px;
+  text-align: center;
+  padding: 12px;
+}
+
+/* @media (max-width: 800px) {
+  .rx-grid {
+    display: block;
+  }
+} */
+
+.rx-top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+
+/* .rx-grid-item-container {
+  position: relative;
+  text-align: center;
+  color: white;
+} */
+
+
+.rx-image-container > figure {
+  margin: auto;
+  background-position: center;
+  background-size: cover;
+  background-image: url(https://images.unsplash.com/photo-1513407030348-c983a97b98d8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=477ae5a62fd5ade3f1e3a08c013af882&auto=format&fit=crop&w=1502&q=80);
+  width: 200px;
+  height: 200px;
+}
