remove urls from volumes without canvases so that the site won't break on import

--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -77,7 +77,7 @@
       </a>
     </div>
     <div class="uk-width-3-4@m">
-      <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
+      <a class="nav-link" href="#">
         <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
       </a>
       <ul class="uk-padding-remove uk-margin-remove">
