--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -118,7 +118,7 @@
           <img class="rx-card-image" src="{% static 'images/image_not_found.jpg' %}" />
         </div>
         <div class="rx-card-body">
-          <a class="nav-link" href="{% url 'collection' volume.collections.first.pid %}">
+          <a class="nav-link" href="#">
             <div class="rx-btn rx-btn-collection">{{volume.collections.first.label}}</div>
           </a>
           <a class="nav-link" href="{% url 'collection' collection.pid %}">
