--- a/apps/templates/menus/main_menu.html
+++ b/apps/templates/menus/main_menu.html
@@ -3,7 +3,7 @@
   <ul class="uk-navbar-nav">
     {% for item in menu_items %}
       <li>
-        <a href="{{ item.href }}">{{ item.text }}</a> {% if item.has_children_in_menu %}{% sub_menu item %}{% endif %}
+        <a href="{{ item.href }}" class="rx-nav-item">{{ item.text }}</a> {% if item.has_children_in_menu %}{% sub_menu item %}{% endif %}
       </li>
     {% endfor %}
   </ul>
