--- a/apps/templates/footer.html
+++ b/apps/templates/footer.html
@@ -1,10 +1,10 @@
 <footer class="uk-margin uk-navbar-nav">
   <div class="uk-navbar-left">
     <ul class="rx-footer uk-padding-remove">
-      <a>
-        <li>About</li>
+      <a href="http://digitalscholarship.emory.edu/" target="_blank" alt="Emory Center for Digital Scholarship">
+        <li>Emory Center for Digital Scholarship</li>
       </a>
-      <a>
+      <!-- <a>
         <li>Contact</li>
       </a>
       <a>
@@ -12,12 +12,12 @@
       </a>
       <a>
         <li>Team</li>
-      </a>
+      </a> -->
     </ul>
   </div>
   <div class="uk-navbar-right">
     <ul class="rx-footer uk-padding-remove">
-      <a>
+      <a href="http://digitalscholarship.emory.edu/projects/software/readux.html" target="_blank" alt="Readux by Emory Center for Digital Scholarship">
         <li>Readux 2.0</li>
       </a>
     </ul>
