--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -785,7 +785,7 @@ p {
   border-radius: 3px;
   border: solid 1px #707070;
   color: #707070;
-  font-family: HelveticaNeue;
+  font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   font-weight: 500;
   line-height: 1.28;
@@ -807,7 +807,7 @@ p {
   border-radius: 3px;
   border: solid 1px #707070;
   color: #707070;
-  font-family: HelveticaNeue;
+  font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 15px;
   font-weight: 600;
   line-height: 1.28;
