--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -63,7 +63,13 @@
         <br />
         <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all</a>
         <br />
-        {% if page.pid is not None %}
+        {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
+        <p style="display:none;">Canvas URL:<span class="link" id="myLink"></span></p>
+        <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
+        <br />{% if user_annotation_count > 0 %}<br/>
+        <b>My annotations (this manifest):</b> {{ user_annotation_count }} <!~~ The my annotations elements will need to be cleaned up when the annotation model changes are fully finished. ~~>
+        <br />{% endif %}
+        {% else %}
         <b>Canvas URL:</b> <span class="link" id="myLink"></span>
         <br />
         <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
